# commit-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
analyze/: commit_analyze.py
assistant/: analyze.py  cli.py  cli_args.py  cli_interface.py  config.py  hooks_setup.py  husky_hooks_setup.py  post_commit.py  pre_commit.py  prepare_commit_msg.py  setup_db.py
database/: setup_db.py
hooks/: post-commit  pre-commit
scripts/: commit-generate.py  post_commit.py  pre_commit.py  prepare_commit_msg.py
tests/: test_config.py
