[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commit-assistant"
version = "0.1.1"
authors = [{ name = "Stone", email = "xijieyin@gmail.com" }]
description = "An AI commit assistant CLI tool."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["google-genai", "rich"]

[project.scripts]
coas = "assistant.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["assistant"]
